👌 remove console.log & fix z-index

--- a/src/Components/Article/_Article.scss
+++ b/src/Components/Article/_Article.scss
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 5;
+    z-index: 4;
     transition: all 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
     &--hidden {
         top: 100vh;
