--- a/src/Components/Conclusion/_Conclusion.scss
+++ b/src/Components/Conclusion/_Conclusion.scss
@@ -10,7 +10,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 6;
+    z-index: 5;
     overflow-y: scroll;
     @extend %mainTransition;
     &--hidden {
