--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 40px;
   left: 40px;
-  z-index: 5; // over the intro section
+  z-index: 3; // over the intro section
   img {
     width: 50px;
     height: auto;
