--- a/src/Components/Intro/_Intro.scss
+++ b/src/Components/Intro/_Intro.scss
@@ -10,7 +10,7 @@
   padding: 150px 40px 100px 68px;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 2;
   transition: all 0.5s ease;
   &--hidden {
     left: -505px;
