--- a/src/Components/Paintings/_Paintings.scss
+++ b/src/Components/Paintings/_Paintings.scss
@@ -5,5 +5,5 @@
     left: 0;
     width: auto;
     height: 100vh;
-    z-index: 4;
+    z-index: 1;
 };
